# src/services/swagger/gateway.swagger.json
@@ -113,29 +113,6 @@
         ]
       }
     },
-    "/medicalpoint/admins": {
-      "get": {
-        "summary": "Get admin",
-        "operationId": "Gateway_GetAdmin",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/medical_chainGetAdminResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "tags": [
-          "Gateway"
-        ]
-      }
-    },
     "/medicalpoint/balance": {
       "get": {
         "summary": "Get Balance",
@@ -156,8 +133,8 @@
         },
         "parameters": [
           {
-            "name": "userId",
-            "description": "userId of user in main server that want to check balance.",
+            "name": "id",
+            "description": "id of user in main server that want to check balance.",
             "in": "query",
             "required": false,
             "type": "string"
@@ -235,14 +212,14 @@
       }
     },
     "/medicalpoint/super-admin": {
-      "post": {
-        "summary": "Init Super admin",
-        "operationId": "Gateway_PostSuperAdmin",
+      "put": {
+        "summary": "Update super-admin to another user",
+        "operationId": "Gateway_PutSuperAdmin",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/medical_chainPostSuperAdminResponse"
+              "$ref": "#/definitions/medical_chainPutSuperAdminResponse"
             }
           },
           "default": {
@@ -252,6 +229,16 @@
             }
           }
         },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/medical_chainPutSuperAdminRequest"
+            }
+          }
+        ],
         "tags": [
           "Gateway"
         ]
@@ -266,6 +253,29 @@
             "description": "A successful response.",
             "schema": {
               "$ref": "#/definitions/medical_chainGetSystemBalanceResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "Gateway"
+        ]
+      }
+    },
+    "/medicalpoint/total-supply": {
+      "get": {
+        "summary": "Get total supply in system",
+        "operationId": "Gateway_GetTotalSupply",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/medical_chainGetTotalSupplyResponse"
             }
           },
           "default": {
@@ -351,9 +361,9 @@
     "medical_chainDeleteAdminRequest": {
       "type": "object",
       "properties": {
-        "userId": {
+        "id": {
           "type": "string",
-          "title": "userId of superadmin in main server"
+          "title": "id of superadmin in main server"
         },
         "adminId": {
           "type": "string",
@@ -364,7 +374,7 @@
     "medical_chainDeleteAdminResponse": {
       "type": "object",
       "properties": {
-        "userId": {
+        "id": {
           "type": "string"
         },
         "adminId": {
@@ -375,9 +385,6 @@
           "title": "txh of transaction delete-admin"
         }
       }
-    },
-    "medical_chainGetAdminResponse": {
-      "type": "object"
     },
     "medical_chainGetBalanceResponse": {
       "type": "object",
@@ -429,12 +436,37 @@
         }
       }
     },
+    "medical_chainGetTotalSupplyResponse": {
+      "type": "object",
+      "properties": {
+        "balances": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/medical_chainGetTotalSupplyResponsePoint"
+          },
+          "title": "list of balances"
+        }
+      }
+    },
+    "medical_chainGetTotalSupplyResponsePoint": {
+      "type": "object",
+      "properties": {
+        "denom": {
+          "type": "string",
+          "title": "denom name of token"
+        },
+        "amount": {
+          "type": "string",
+          "title": "amount of token"
+        }
+      }
+    },
     "medical_chainPostAdminRequest": {
       "type": "object",
       "properties": {
-        "userId": {
+        "id": {
           "type": "string",
-          "title": "userId of superadmin in main server"
+          "title": "id of superadmin in main server"
         },
         "adminId": {
           "type": "string",
@@ -445,7 +477,7 @@
     "medical_chainPostAdminResponse": {
       "type": "object",
       "properties": {
-        "userId": {
+        "id": {
           "type": "string"
         },
         "adminId": {
@@ -460,13 +492,13 @@
     "medical_chainPostAdminTransferRequest": {
       "type": "object",
       "properties": {
-        "userId": {
+        "id": {
           "type": "string",
-          "title": "userId of sender admin in main server"
+          "title": "id of admin in main server"
         },
         "to": {
           "type": "string",
-          "title": "userId of reciever user in main server"
+          "title": "id of reciever user in main server"
         },
         "amount": {
           "type": "string",
@@ -481,7 +513,7 @@
     "medical_chainPostAdminTransferResponse": {
       "type": "object",
       "properties": {
-        "userId": {
+        "id": {
           "type": "string"
         },
         "to": {
@@ -503,9 +535,9 @@
     "medical_chainPostBurnRequest": {
       "type": "object",
       "properties": {
-        "userId": {
+        "id": {
           "type": "string",
-          "title": "userId of superadmin in main server"
+          "title": "id of superadmin in main server"
         },
         "amount": {
           "type": "string",
@@ -516,7 +548,7 @@
     "medical_chainPostBurnResponse": {
       "type": "object",
       "properties": {
-        "userId": {
+        "id": {
           "type": "string"
         },
         "amount": {
@@ -536,16 +568,16 @@
           "type": "string",
           "title": "amount of token to mint"
         },
-        "userId": {
+        "id": {
           "type": "string",
-          "title": "userId of superadmin in main server"
+          "title": "id of superadmin in main server"
         }
       }
     },
     "medical_chainPostMintResponse": {
       "type": "object",
       "properties": {
-        "userId": {
+        "id": {
           "type": "string"
         },
         "amount": {
@@ -558,24 +590,16 @@
         }
       }
     },
-    "medical_chainPostSuperAdminResponse": {
-      "type": "object",
-      "properties": {
-        "userId": {
-          "type": "string"
-        }
-      }
-    },
     "medical_chainPostTransferRequest": {
       "type": "object",
       "properties": {
-        "userId": {
+        "id": {
           "type": "string",
-          "title": "userId of sender user in main server"
+          "title": "id of sender user in main server"
         },
         "to": {
           "type": "string",
-          "title": "userId of reciever user in main server"
+          "title": "id of reciever user in main server"
         },
         "amount": {
           "type": "string",
@@ -590,7 +614,7 @@
     "medical_chainPostTransferResponse": {
       "type": "object",
       "properties": {
-        "userId": {
+        "id": {
           "type": "string"
         },
         "to": {
@@ -612,18 +636,45 @@
     "medical_chainPostUserRequest": {
       "type": "object",
       "properties": {
-        "userId": {
+        "id": {
           "type": "string",
-          "title": "userId in main server"
+          "title": "id in main server"
         }
       }
     },
     "medical_chainPostUserResponse": {
       "type": "object",
       "properties": {
-        "userId": {
+        "id": {
+          "type": "string"
+        }
+      }
+    },
+    "medical_chainPutSuperAdminRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
           "type": "string",
-          "title": "userId in main server"
+          "title": "id of current superadmin in main server"
+        },
+        "adminId": {
+          "type": "string",
+          "title": "id of new admin to update, must existed in system"
+        }
+      }
+    },
+    "medical_chainPutSuperAdminResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "adminId": {
+          "type": "string"
+        },
+        "txh": {
+          "type": "string",
+          "title": "txh of transaction transfer-super-admin"
         }
       }
     },
